white-space: pre-wrap; for <pre/> in questions. [bug 650926]

--- a/media/css/questions.css
+++ b/media/css/questions.css
@@ -495,6 +495,10 @@ div.main-section div.content li {
     padding: 0;
 }
 
+div.main-section div.content pre {
+    white-space: pre-wrap;
+}
+
 div.main-section div.content .stem {
     border-bottom: 30px solid transparent;
     border-right: 30px solid rgba(0, 0, 0, 0.15);
